reafact: fix text alignment

--- a/app/Componenets/Header/style.css
+++ b/app/Componenets/Header/style.css
@@ -2,4 +2,5 @@
     display: flex;
     flex-direction: column;
     gap: var(--bigger-row-gap);
+    text-align: center;
 }
